--- a/index.html
+++ b/index.html
@@ -143,42 +143,42 @@
                 <div class="slider-track">
                     <!-- Slide 1 -->
                     <div class="slide">
-                        <img src="./assets/owl-wrapper/imaage01.jpg" alt="Rebel Moon – Chapter One: Chalice of Blood ">
+                        <img src="./imaage01.jpg" alt="Rebel Moon – Chapter One: Chalice of Blood ">
                         <div class="slide-title">Rebel Moon – Chapter One: Chalice of Blood </div>
                         <div class="slide-year">2024</div>
                         <div class="slide-label">Movie</div>
                     </div>
                     <!-- Slide 2 -->
                     <div class="slide">
-                        <img src="./assets/owl-wrapper/imaage02.jpg" alt="The Last of Us : Season 2 ">
+                        <img src="./imaage02.jpg" alt="The Last of Us : Season 2 ">
                         <div class="slide-title">The Last of Us : Season 2</div>
                         <div class="slide-year">2024</div>
                         <div class="slide-label">Movie</div>
                     </div>
                     <!-- Slide 3 -->
                     <div class="slide">
-                        <img src="./assets/owl-wrapper/imaage03.jpg" alt="Godzilla Minus One ">
+                        <img src="./imaage03.jpg" alt="Godzilla Minus One ">
                         <div class="slide-title">Godzilla Minus One </div>
                         <div class="slide-year">2023</div>
                         <div class="slide-label">Movie</div>
                     </div>
                     <!-- Slide 4 -->
                     <div class="slide">
-                        <img src="./assets/owl-wrapper/image04.jpg" alt="Akaal ">
+                        <img src="./image04.jpg" alt="Akaal ">
                         <div class="slide-title">Akaal (2025)</div>
                         <div class="slide-year">2025</div>
                         <div class="slide-label">Movie</div>
                     </div>
                     <!-- Slide 5 -->
                     <div class="slide">
-                        <img src="./assets/owl-wrapper/image05.jpg" alt="Mobile Suit Gundam GQuuuuuuX: Beginning : Season 1">
+                        <img src="./image05.jpg" alt="Mobile Suit Gundam GQuuuuuuX: Beginning : Season 1">
                         <div class="slide-title">Mobile Suit Gundam GQuuuuuuX: Beginning : Season 1</div>
                         <div class="slide-year">2025</div>
                         <div class="slide-label">Movie</div>
                     </div>
                     <!-- Slide 6 -->
                     <div class="slide">
-                        <img src="./assets/owl-wrapper/image05.jpg" alt="Mobile Suit Gundam GQuuuuuuX: Beginning : Season 1">
+                        <img src="./image05.jpg" alt="Mobile Suit Gundam GQuuuuuuX: Beginning : Season 1">
                         <div class="slide-title">Mobile Suit Gundam GQuuuuuuX: Beginning : Season 1</div>
                         <div class="slide-year">2025</div>
                         <div class="slide-label">Movie</div>
